# f-EVOVAQ

./: README.md  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/source/: algorithms.rst  conf.py  index.rst  problem.rst  tools.rst  tutorials_trainVQCs.ipynb
fevovaq/: BigBangBigCrunch.py  CHCAlgorithm.py  DifferentialEvolution.py  GeneticAlgorithm.py  HillClimbing.py  MemeticAlgorithm.py  ParticleSwarmOptimization.py  problem.py
fevovaq/tools/: __init__.py  distances.py  operators.py  support.py
