# Inside of setup.cfg
[metadata]
description-file = README.md
name = "fevovaq"
version = "1.0.1"
author = "Angela Chiatto"
author_email = "angela.chiatto@unina.it"
description = "fast-EVOlutionary algorithms toolbox for VAriational Quantum circuits"
long_description = README.md
long_description_content_type = "text/markdown"
url = "https://github.com/Quasar-UniNA/EVOVAQ"
license = "MIT"
